--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,8 @@
               "src/favicon.ico" 
             ],
             "styles": [
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",             
               "src/styles.scss"
               
             ],
@@ -53,13 +55,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "5GB",
+                  "maximumError": "3GB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumWarning": "4GB",
+                  "maximumError": "4GB"
                 }
               ],
               "outputHashing": "all"
